[package]
name = "sg90-motor-with-pwm"
version = "0.1.0"
authors = ["Wison Ye <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal="0.11.3"
gpio_util={ path="../gpio_util", version="0.1.0" }
servo_motor_util={ path="../servo_motor_util", version="0.1.0" }
